@@ -121,6 +121,7 @@ class SagCURLHTTPAdapter extends SagHTTPAdapter {
         }
         else {
           $line = explode(':', $headers[$i], 2);
+          $line[0] = strtolower($line[0]);
           $response->headers->$line[0] = ltrim($line[1]);
 
           if($line[0] == 'Set-Cookie') {
